--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       preferred-json-mapper: gson
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://db:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: wlghks24461!
   jpa:
