--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       db:
-        image: mysql:8.0
+        image: mysql:latest
         env:
           MYSQL_ROOT_PASSWORD: wlghks24461!
           MYSQL_DATABASE: harpsharp
@@ -33,6 +33,15 @@ jobs:
     steps:
       - name: 체크아웃
         uses: actions/checkout@v2
+      - name: Wait for MySQL
+        run: |
+            for i in {1..10}; do
+              if mysql --host=db --port=3306 -u root -p wlghks24461! -e 'SELECT 1'; then
+                break
+              fi
+              echo "Waiting for MySQL..."
+              sleep 10
+            done
       - name: Verify MySQL connection from host
         run: |
           sudo apt-get install -y mysql-client
