--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Wait for MySQL
         run: |
             for i in {1..10}; do
-              if mysql --host=db --port=3306 -u root -p wlghks24461! -e 'SELECT 1'; then
+              if mysql --host=127.0.0.1 --port=3306 -u root -p wlghks24461! -e 'SELECT 1'; then
                 break
               fi
               echo "Waiting for MySQL..."
@@ -45,7 +45,7 @@ jobs:
       - name: Verify MySQL connection from host
         run: |
           sudo apt-get install -y mysql-client
-          mysql --host db --port 3306 -u root -p wlghks24461! -e "SHOW DATABASES"
+          mysql --host 127.0.0.1 --port 3306 -u root -p wlghks24461! -e "SHOW DATABASES"
       - name: Verify Redis connection from host
         run: |
           sudo apt-get install -y redis-tools
