--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Wait for MySQL
         run: |
             for i in {1..10}; do
-              if mysql --host=127.0.0.1 --port=3306 -u root -p wlghks24461! -e 'SELECT 1'; then
+              if sudo mysql --host=127.0.0.1 --port=3306 -u root -p wlghks24461! -e 'SELECT 1'; then
                 break
               fi
               echo "Waiting for MySQL..."
@@ -45,11 +45,11 @@ jobs:
       - name: Verify MySQL connection from host
         run: |
           sudo apt-get install -y mysql-client
-          mysql --host 127.0.0.1 --port 3306 -u root -p wlghks24461! -e "SHOW DATABASES"
+          sudo mysql --host 127.0.0.1 --port 3306 -u root -p wlghks24461! -e "SHOW DATABASES"
       - name: Verify Redis connection from host
         run: |
           sudo apt-get install -y redis-tools
-          redis-cli -h redis -p 6379 ping
+          sudo redis-cli -h redis -p 6379 ping
       - name: JDK 17 설정
         uses: actions/setup-java@v3
         with:
