--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Verify MySQL connection from host
         run: |
           sudo apt-get install -y mysql-client
-          sudo mysql -u root -p wlghks24461! --host=127.0.0.1 --port=3306 -e "SHOW DATABASES"
+          sudo mysql -h 127.0.0.1 --port=3306 -u root -p wlghks24461! -e "SHOW DATABASES"
       - name: Verify Redis connection from host
         run: |
           sudo apt-get install -y redis-tools
