--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       db:
-        image: mysql:latest
+        image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: wlghks24461!
           MYSQL_DATABASE: harpsharp
@@ -34,8 +34,7 @@ jobs:
       - name: 체크아웃
         uses: actions/checkout@v2
       - name: Verify MySQL connection from host
-        run: |
-          mysql -h 127.0.0.1 --port=3306 -u root -p wlghks24461! -e "SHOW DATABASES"
+        run: mysql -h 127.0.0.1 --port=3306 -u root -pwlghks24461! -e "SHOW DATABASES"
       - name: Verify Redis connection from host
         run: |
           sudo redis-cli -h redis -p 6379 ping
