--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       preferred-json-mapper: gson
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://db:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: wlghks24461!
   jpa:
@@ -26,5 +26,5 @@ spring:
 
   data:
     redis:
-      host: redis
+      host: 127.0.0.1
       port: 6379
