--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -93,9 +93,17 @@ tasks.register('copySwaggerUI', Copy){
 	into(layout.buildDirectory.dir("/resources/main/static/docs").get().asFile)
 }
 
+tasks.withType(Jar) {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	manifest {
+		attributes["Main-Class"] = "com.example.harpsharp.AuthApplication"
+	}
+}
+
 bootJar {
 	dependsOn generateSwaggerUISample
 }
+
 
 
 
