fix: github actions script 수정

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           mkdir -p before-deploy-auth
           cp auth/build/libs/auth-*.jar before-deploy-auth/
-          cp scripts/*.sh before-deploy-auth/
+          cp auth/scripts/*.sh before-deploy-auth/
           cp appspec.yml before-deploy-auth/
           cp Dockerfile before-deploy-auth/
           cd before-deploy-auth && zip -r before-deploy-auth *
