test: 배포 테스트

--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -47,7 +47,7 @@ openapi3 {
 
 swaggerSources {
 	sample {
-		setInputFile(file("${project.buildDir}/api-spec/HarpSharp_API_Auth.yaml"))
+		setInputFile(file("${project.buildDir}/api-spec/HarpSharp_API_Auth.json"))
 	}
 }
 
