test: 배포 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -54,7 +54,7 @@ jobs:
           chmod +x gradlew
           ./gradlew build
           ./gradlew openapi3
-          aws s3 cp auth/build/api-spec/HarpSharp_API_AUTH.json s3://${{secrets.AWS_BUCKET_NAME}}/HarpSharp_API_AUTH.json
+          aws s3 cp auth/build/api-spec/HarpSharp_API_Auth.json s3://${{secrets.AWS_BUCKET_NAME}}/HarpSharp_API_Auth.json
         shell: bash
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
