--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -53,8 +53,9 @@ jobs:
           mkdir -p build/generated-snippets/
           chmod +x gradlew
           ./gradlew build
-          ./gradlew openapi3
-          aws s3 cp auth/build/api-spec/HarpSharp_API_Auth.json s3://${{secrets.AWS_BUCKET_NAME}}/HarpSharp_API_Auth.json
+          ./gradlew openapi3 --no-build-cache
+          FILE_PATH=$(find . -name HarpSharp_API_Auth.json)
+          aws s3 cp $FILE_PATH s3://${{secrets.AWS_BUCKET_NAME}}/HarpSharp_API_Auth.json
         shell: bash
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
