--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,4 +2,4 @@ FROM amazoncorretto:17
 
 COPY auth-0.0.1-SNAPSHOT.jar .
 
-CMD java -jar -Dspring.profiles.active=dev auth-0.0.1-SNAPSHOT.jar
+CMD java -jar auth-0.0.1-SNAPSHOT.jar
