--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,5 +1,5 @@
-FROM amazoncorretto:17
+FROM openjdk:17-jdk
 
 COPY auth-0.0.1-SNAPSHOT.jar .
 
-CMD java -jar auth-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "./auth-0.0.1-SNAPSHOT.jar"]
