--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,18 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  harpsharp.com;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+    }
+
+    location /.well-known/acme-challenge/ {
+        allow all;
+        root /var/www/cerbot;
     }
 
     #error_page  404              /404.html;
