--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -100,12 +100,14 @@ jobs:
           cd ../ && mkdir -p deploy-nginx
           mv before-deploy-nginx/before-deploy-nginx.zip deploy-nginx/deploy-nginx.zip
           aws s3 cp deploy-nginx/deploy-nginx.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-nginx.zip
-          DEPLOYMENT_ID = 
+          
+          DEPLOYMENT_ID= \ 
           $(aws deploy list-deployments 
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]")
           aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
+          
           aws deploy create-deployment \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
           --deployment-config-name CodeDeployDefault.AllAtOnce \
