fix: CodeDeploy의 배포가 끝날 때까지 다음 배포를 보류하는 로직 추가

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -106,8 +106,8 @@ jobs:
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]")
           DEPLOYMENT_ID=$(echo DEPLOYMENT_JSON | jq -r '.deploymentId')
-          echo DEPOLYMENT_JSON
-          echo DEPLOYMENT_ID
+          echo $DEPOLYMENT_JSON
+          echo $DEPLOYMENT_ID
           aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
           
           aws deploy create-deployment \
