fix: CodeDeploy의 배포가 끝날 때까지 다음 배포를 보류하는 로직 추가

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -105,9 +105,7 @@ jobs:
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]")
-          DEPLOYMENT_ID=$(echo DEPLOYMENT_JSON | jq -r '.deploymentId')
-          echo $DEPOLYMENT_JSON
-          echo $DEPLOYMENT_ID
+          DEPLOYMENT_ID=$(cat DEPLOYMENT_JSON | jq -r '.deploymentId')
           aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
           
           aws deploy create-deployment \
