--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -106,6 +106,7 @@ jobs:
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]")
           DEPLOYMENT_ID=$(cat DEPLOYMENT_JSON | jq -r '.deploymentId')
+          echo $DEPLOYMENT_ID
           aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
           
           aws deploy create-deployment \
