--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -104,7 +104,7 @@ jobs:
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]")
-          DEPLOYMENT_ID=$(cat $DEPLOYMENT_JSON | jq -r '.deploymentId')
+          DEPLOYMENT_ID=$(echo $DEPLOYMENT_JSON | jq -r '.deploymentId')
           aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
           
           aws deploy create-deployment \
