--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 443:443
     volumes:
       - ./nginx.conf.d: /etc/nginx/nginx.conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./content:/var/www
     networks:
