--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -31,8 +31,8 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    expose:
-      - "8080"
+    ports:
+      - 8080:8080
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/harpsharp?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: "root"
