--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=board
+spring.application.name=web-project
+spring.datasource.url=jdbc:mysql://localhost:3306/web-project-db
+spring.datasource.username=board_user
+spring.datasource.password=board_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
