--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,23 +1,49 @@
-# HTTP 요청을 HTTPS로 리다이렉트하는 서버 블록
-# server {
-#     listen 80;
-#     server_name harpsharp.com www.harpsharp.com;
-#     return 301 https://harpsharp.com$request_uri;
-# }
-#
-# server {
-#        listen 443 ssl;
-# server_name harpsharp.com www.harpsharp.com;
-#        # Certificate
-#        ssl_certificate /etc/letsencrypt/live/harpsharp.com/fullchain.pem;
-#
-#        # Private Key
-#        ssl_certificate_key /etc/letsencrypt/live/harpsharp.com/privkey.pem;
-#        location / {
-#                proxy_pass http://auth:8080; # 자신의 springboot app이사용하는 포트
-#                proxy_set_header Host $host;
-#                proxy_set_header X-Real-IP $remote_addr;
-#                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#                proxy_set_header X-Forwarded-Proto $scheme;
-#                }
-# }
+server {
+    listen 80;
+    server_name harpsharp.com www.harpsharp.com;
+    include /etc/nginx/conf.d/header.conf;
+    return 301 https://harpsharp.com$request_uri;
+}
+
+server {
+       listen 443 ssl;
+       server_name harpsharp.com www.harpsharp.com;
+       # Certificate
+       ssl_certificate /etc/letsencrypt/live/harpsharp.com/fullchain.pem;
+       # Private Key
+       ssl_certificate_key /etc/letsencrypt/live/harpsharp.com/privkey.pem;
+       include /etc/letsencrypt/options-ssl-nginx.conf;
+       ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+       location / {
+               root   /usr/share/nginx/html;
+               proxy_pass http://auth:8080; # 자신의 springboot app이사용하는 포트
+               include /etc/nginx/conf.d/header.conf;
+       }
+
+       # API 엔드포인트 설정
+       location /login {
+               proxy_pass http://auth:8080;
+               include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /logout {
+               proxy_pass http://auth:8080;
+               include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /reissue {
+               proxy_pass http://auth:8080;
+               include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /user {
+               proxy_pass http://auth:8080;
+               include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /swagger/auth {
+           proxy_pass http://swagger:8000;
+           include /etc/nginx/conf.d/header.conf;
+       }
+}
