--- a/board/build.gradle
+++ b/board/build.gradle
@@ -1,38 +1,53 @@
-import org.gradle.api.file.DuplicatesStrategy
-
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
+	id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
-group = 'com.example'
+
+group = 'com.harpsharp'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+
+openapi3 {
+	servers = [
+			{ url = "http://localhost:8080" },
+			{ url = "http://harpsharp.com/swagger" }
+	]
+	title = "Harp Sharp Board API"
+	description = "Harp Sharp 게시글 관련된 API입니다."
+	version = "1.0.0"
+	format = 'json'
+}
+
+
+swaggerSources {
+	sample {
+		setInputFile(file("${project.buildDir}/api-spec/board.json"))
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation project(':infra_rds')
+	swaggerUI 'org.webjars:swagger-ui:4.11.1'
 }
 
 bootJar {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
