--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,17 @@ plugins {
     id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
-repositories {
-    mavenCentral()
+allprojects {
+
+    repositories {
+        mavenCentral()
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
 }
 
 bootJar.enabled = false
@@ -28,29 +37,29 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
+
+
     configurations {
         compileOnly {
             extendsFrom annotationProcessor
         }
     }
 
-    repositories {
-        mavenCentral()
-    }
-
     // 관리하는 모듈의 공통 dependencies
     dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        runtimeOnly 'com.mysql:mysql-connector-j'
+        annotationProcessor 'org.projectlombok:lombok'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-starter-validation'
+        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
         testImplementation 'org.projectlombok:lombok:1.18.20'
         testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
         testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
-        runtimeOnly 'com.mysql:mysql-connector-j'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
