refactor: 1. 공유하는 의존성을 루트 프로젝트의 build.gradle로 병합  2. 공유하는 DB자원을 infra_rds 모듈 분리 3. User 엔티티 + BasePost 엔티티 간 의존관계 추가

--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     expose:
       - "8000"
     environment:
-      - SWAGGER_JSON=mnt/HarpSharp_API_Auth.json
+      - SWAGGER_JSON=mnt/auth.json
     networks:
       - harpsharp
 
