--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -25,14 +25,15 @@ swaggerSources {
 }
 
 dependencies {
-	implementation project(':infra_rds')
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+	testImplementation "org.springframework.security:spring-security-test"
 	swaggerUI 'org.webjars:swagger-ui:4.11.1'
+	api project(':infra_rds')
 }
 
 bootJar {
