--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 	testImplementation "org.springframework.security:spring-security-test"
 	swaggerUI 'org.webjars:swagger-ui:4.11.1'
-	api project(':infra_rds')
+	implementation project(':infra_rds')
 }
 
 bootJar {
