test: 멀티모듈 빌드 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           mkdir -p auth/build/generated-snippets/
           chmod +x auth/gradlew
-          auth/gradlew build --no-build-cache --warning-mode all
+          ./gradlew auth:bootJar --no-build-cache --warning-mode all
           auth/gradlew openapi3 --no-build-cache --warning-mode all
 
         shell: bash
