--- a/board/src/main/resources/application-prod.yml
+++ b/board/src/main/resources/application-prod.yml
@@ -4,10 +4,9 @@ spring:
   mvc:
     converters:
       preferred-json-mapper: gson
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://mysql:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: wlghks24461!
   jpa:
@@ -24,11 +23,3 @@ spring:
     show_sql: true
   logging.level:
     org.hibernate.SQL: debug
-
-  data:
-    redis:
-      repositories:
-        enabled:
-          false
-      host: 127.0.0.1
-      port: 6379
