--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -8,8 +8,8 @@ plugins {
 
 openapi3 {
 	servers = [
-			{ url = "http://swagger" },
-			{ url = "http://harpsharp.com/swagger" }
+			{ url = "http://swagger-auth" },
+			{ url = "http://harpsharp.com/swagger/auth" }
 	]
 	title = "Harp Sharp Auth API"
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
@@ -17,20 +17,10 @@ openapi3 {
 	format = 'json'
 }
 
-
-swaggerSources {
-	sample {
-		setInputFile(file("${project.buildDir}/api-spec/auth.json"))
-	}
-}
-
 dependencies {
 	implementation 	   project(':infra_rds')
-	testImplementation project(':infra_rds')
-
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
