--- a/infra_rds/appspec.yml
+++ b/infra_rds/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/deploy/auth/
+    destination: /home/ubuntu/deploy/db/
     overwrite: yes
 
 permissions:
@@ -13,6 +13,6 @@ permissions:
 
 hooks:
   ApplicationStart:
-    - location: deploy-auth.sh
+    - location: deploy-db.sh
       timeout: 60
       runas: ubuntu
