test: 멀티모듈 빌드 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,8 +55,8 @@ jobs:
           chmod +x board/gradlew
           chmod +x gradlew
   
-          ./gradlew auth:bootJar --no-build-cache --warning-mode all
-          ./gradlew board:bootJar --no-build-cache --warning-mode all
+          ./gradlew :auth:bootJar --no-build-cache --warning-mode all
+          ./gradlew :board:bootJar --no-build-cache --warning-mode all
           auth/gradlew openapi3 --no-build-cache --warning-mode all
           board/gradlew openapi3 --no-build-cache --warning-mode all
 
