--- a/board/build.gradle
+++ b/board/build.gradle
@@ -15,6 +15,8 @@ openapi3 {
 	description = "Harp Sharp 아이스브레이킹 API입니다."
 	version = "1.0.0"
 	format = 'json'
+
+	outputDirectory = 'build/openapi3'
 }
 
 dependencies {
